Добавлены макеты форм залогинивания и добавления цитаты

--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,8 @@
   </header>
   <main class="main wrapper">
     <h1 class="title">Книга Мудрости</h1>
+    <form class="filter-form">
+    </form>
     <div class="cuotes-container">
       <div class="quote">
         <p class="quote-text">
@@ -45,9 +47,21 @@
         <h3 class="quote-tags">Категория: Разное</h3>
       </div>
     </div>
-    <form class="filter-form">
+    <form class="add-form active">
+      <label>Цитата<textarea name="quote" rows="10"></textarea></label>
+      <label>Категория<input type="text" name="tag"></label>
+      <div class="buttons">
+        <button type="submit">Добавить</button>
+        <button type="reset">Отмена</button>
+      </div>
     </form>
-    <form class="add-form">
+    <form class="login-form active">
+      <label>Логин<input type="text" name="login"></label>
+      <label>Пароль<input type="password" name="password"></label>
+      <div class="buttons">
+        <button type="submit">Войти</button>
+        <button type="reset">Отмена</button>
+      </div>
     </form>
   </main>
 </body>
