Выполнен черновой вариант без фильтрации по категориям

--- a/src/index.html
+++ b/src/index.html
@@ -9,45 +9,43 @@
 </head>
 <body>
   <header class="header wrapper">
-    <a href="#">
-      <svg class="exit-icon" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" 
-           x="0px" y="0px" width="533.333px" height="533.333px" viewBox="0 0 533.333 533.333" style="enable-background:new 0 0 533.333 533.333; "xml:space="preserve">
-        <g>
-          <path d="M416.667,333.333v-66.666H250V200h166.667v-66.667l100,100L416.667,333.333z M383.333,300v133.333H216.667v100l-200-100V0
-                   h366.667v166.667H350V33.333H83.333L216.667,100v300H350V300H383.333z"/>
-        </g>
-      </svg>   
-    </a>
+    <div class="header-container">
+      <a href="#" class="exit-button">
+        <svg class="exit-icon" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" 
+             x="0px" y="0px" width="533.333px" height="533.333px" viewBox="0 0 533.333 533.333" style="enable-background:new 0 0 533.333 533.333; "xml:space="preserve">
+          <g>
+            <path d="M416.667,333.333v-66.666H250V200h166.667v-66.667l100,100L416.667,333.333z M383.333,300v133.333H216.667v100l-200-100V0
+                     h366.667v166.667H350V33.333H83.333L216.667,100v300H350V300H383.333z"/>
+          </g>
+        </svg>   
+      </a>
+    </div>
   </header>
   <main class="main wrapper">
     <h1 class="title">Книга Мудрости</h1>
     <form class="filter-form">
     </form>
-    <div class="cuotes-container">
-      <div class="quote">
+    <div class="quotes-container">
+      <!--div class="quote">
         <p class="quote-text">
           С точки зрения банальной эрудиции, мы не вправе игнорировать тенденции парадоксальных эмоций данного индивидуума, ибо его концепция при данных интерпретациях выглядит весьма логично
         </p>
         <h3 class="quote-tags">Категория: ВвС</h3>
       </div>
-    </div>
-    <div class="cuotes-container">
       <div class="quote">
         <p class="quote-text">
           С точки зрения банальной эрудиции, мы не вправе игнорировать тенденции парадоксальных эмоций данного индивидуума, ибо его концепция при данных интерпретациях выглядит весьма логично
         </p>
         <h3 class="quote-tags">Категория: Юмор</h3>
       </div>
-    </div>
-    <div class="cuotes-container">
       <div class="quote">
         <p class="quote-text">
           С точки зрения банальной эрудиции, мы не вправе игнорировать тенденции парадоксальных эмоций данного индивидуума, ибо его концепция при данных интерпретациях выглядит весьма логично
         </p>
         <h3 class="quote-tags">Категория: Разное</h3>
-      </div>
+      </div-->
     </div>
-    <form class="add-form active">
+    <form class="add-form">
       <label>Цитата<textarea name="quote" rows="10"></textarea></label>
       <label>Категория<input type="text" name="tag"></label>
       <div class="buttons">
