Добавлена сортировка и заготовка фильтрации по категориям

--- a/src/index.html
+++ b/src/index.html
@@ -10,8 +10,23 @@
 <body>
   <header class="header wrapper">
     <div class="header-container">
-      <a href="#" class="exit-button">
-        <svg class="exit-icon" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" 
+      <a href="#" class="filter-button">
+        <svg class="header-icon" width="19px" height="20px" viewBox="0 0 19 20" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+          <g id="Icons" stroke="none" stroke-width="1" stroke-linecap="round" stroke-linejoin="round">
+              <g id="24-px-Icons" transform="translate(-219.000000, -314.000000)" stroke="#000000">
+                  <g id="ic_filter" transform="translate(216.000000, 312.000000)">
+                      <g id="filter">
+                          <g transform="translate(4.000000, 3.000000)" stroke-width="2">
+                              <polygon id="Path-7" points="0 0 17 0 11 8 11 18 6 14 6 8"></polygon>
+                          </g>
+                      </g>
+                  </g>
+              </g>
+          </g>
+      </svg>        
+      </a>
+      <a href="#" class="header-button exit-button">
+        <svg class="header-icon" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" 
              x="0px" y="0px" width="533.333px" height="533.333px" viewBox="0 0 533.333 533.333" style="enable-background:new 0 0 533.333 533.333; "xml:space="preserve">
           <g>
             <path d="M416.667,333.333v-66.666H250V200h166.667v-66.667l100,100L416.667,333.333z M383.333,300v133.333H216.667v100l-200-100V0
@@ -24,26 +39,14 @@
   <main class="main wrapper">
     <h1 class="title">Книга Мудрости</h1>
     <form class="filter-form">
+      <label><input type="checkbox"/>qweeqwe</label>
+      <label><input type="checkbox"/>qweeqwdffgdf</label>
+      <div class="buttons">
+        <button type="submit">Установить фильтр</button>
+        <button type="reset">Сбросить фильтр</button>
+      </div>
     </form>
     <div class="quotes-container">
-      <!--div class="quote">
-        <p class="quote-text">
-          С точки зрения банальной эрудиции, мы не вправе игнорировать тенденции парадоксальных эмоций данного индивидуума, ибо его концепция при данных интерпретациях выглядит весьма логично
-        </p>
-        <h3 class="quote-tags">Категория: ВвС</h3>
-      </div>
-      <div class="quote">
-        <p class="quote-text">
-          С точки зрения банальной эрудиции, мы не вправе игнорировать тенденции парадоксальных эмоций данного индивидуума, ибо его концепция при данных интерпретациях выглядит весьма логично
-        </p>
-        <h3 class="quote-tags">Категория: Юмор</h3>
-      </div>
-      <div class="quote">
-        <p class="quote-text">
-          С точки зрения банальной эрудиции, мы не вправе игнорировать тенденции парадоксальных эмоций данного индивидуума, ибо его концепция при данных интерпретациях выглядит весьма логично
-        </p>
-        <h3 class="quote-tags">Категория: Разное</h3>
-      </div-->
     </div>
     <form class="add-form">
       <label>Цитата<textarea name="quote" rows="10"></textarea></label>
