Сделана предварительная рабочая версия

--- a/src/index.html
+++ b/src/index.html
@@ -39,8 +39,8 @@
   <main class="main wrapper">
     <h1 class="title">Книга Мудрости</h1>
     <form class="filter-form">
-      <label><input type="checkbox"/>qweeqwe</label>
-      <label><input type="checkbox"/>qweeqwdffgdf</label>
+      <div class="filter-list"> 
+      </div>
       <div class="buttons">
         <button type="submit">Установить фильтр</button>
         <button type="reset">Сбросить фильтр</button>
